--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -83,7 +83,10 @@
         <thead>
           <tr>
             <th>
-              Points
+              Avg Points
+            </th>
+            <th>
+              Competitions
             </th>
             <th>
               Name
@@ -97,12 +100,10 @@
           <% @available_players.each do |player| %>
           <tr id="<%= player.id %>">
             <td scope="row" data-defaultsort="desc">
-              <% result = player.results.find_by(competition_id: Competition.find_by_name("Pro Tour Aether Revolt").id, player_id: player.id) %>
-              <% if result %>
-                <%= result.points %>
-              <% else %>
-                0
-              <% end %>
+              <%= player.points_per_result %>
+            </td>
+            <td>
+              <%= player.results.count %>
             </td>
             <td>
               <%= player.name %>
