--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -19,3 +19,276 @@
 //
 // Example:
 // @link-color: #ff0000;
+
+
+@white:    #fff;
+@gray-100: #f8f9fa;
+@gray-200: #e9ecef;
+@gray-300: #ddd;
+@gray-400: #ced4da;
+@gray-500: #adb5bd;
+@gray-600: #868e96;
+@gray-700: #495057;
+@gray-800: #343a40;
+@gray-900: #212529;
+@black:    #000;
+
+@blue:    #4582EC;
+@indigo:  #6610f2;
+@purple:  #6f42c1;
+@pink:    #e83e8c;
+@red:     #d9534f;
+@orange:  #fd7e14;
+@yellow:  #f0ad4e;
+@green:   #02B875;
+@teal:    #20c997;
+@cyan:    #17a2b8 ;
+
+@primary:       @blue;
+@secondary:     @gray-500;
+@success:       @green;
+@info:          @cyan;
+@warning:       @yellow;
+@danger:        @red;
+@light:         @gray-100;
+@dark:          @gray-800;
+
+// Body
+
+@body-color:                @gray-800;
+
+// Fonts
+
+@font-size-base:              1.063rem;
+
+@headings-font-weight:        700;
+
+// Tables
+
+@table-border-color:          rgba(0,0,0,0.1);
+
+// Buttons
+
+@input-btn-padding-y:         0.5rem;
+@input-btn-padding-x:         1.1rem;
+
+// Forms
+
+@input-border-color:                    rgba(0,0,0,.1);
+
+@input-group-addon-bg:                  @gray-200;
+
+// Navbar
+
+@navbar-dark-color:                 rgba(255,255,255,.6);
+@navbar-dark-hover-color:           @white;
+
+@navbar-light-hover-color:          @body-color;
+@navbar-light-active-color:         @body-color;
+
+// Badges
+
+@badge-font-weight:                 normal;
+@badge-padding-y:                   0.6em;
+@badge-padding-x:                   1.2em;
+
+
+// Variables ===================================================================
+
+@font-family-sans-serif: "Helvetica Neue", "Arial";
+@font-family-serif:      Georgia, Cambria, "Times New Roman", Times, serif;
+
+// Navbar ======================================================================
+
+.navbar {
+  font-size: 1em;
+  background: @white;
+}
+
+.bg-dark {
+  background-color: @success !important;
+}
+
+.bg-light {
+  background-color: #fff !important;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  &.navbar-fixed-top {
+    border-width: 0 0 1px 0;
+  }
+
+  &.navbar-fixed-bottom {
+    border-width: 1px 0 0 0;
+  }
+}
+
+// Buttons =====================================================================
+
+.btn {
+  // border-radius: 1.078em;
+  font-family: @font-family-sans-serif;
+  font-size: 0.875em;
+
+  // &-lg {
+  //   border-radius: 2.688em;
+  // }
+  //
+  // &-sm {
+  //   border-radius: 0.844em;
+  //   font-size: 0.688em;
+  // }
+
+  &-secondary,
+  &-secondary:hover,
+  &-warning,
+  &-warning:hover {
+    color: @white;
+  }
+}
+
+// Typography ==================================================================
+
+p {
+  font-family: @font-family-sans-serif;
+}
+
+blockquote {
+  font-style: italic;
+}
+
+footer {
+  font-size: 0.875em;
+}
+
+.lead {
+  color: @gray-600;
+  font-family: @font-family-sans-serif;
+}
+
+// Tables ======================================================================
+
+table,
+.table {
+  font-size: 0.875em;
+
+  &-success,
+  &-info,
+  &-warning,
+  &-danger {
+    color: #fff;
+  }
+}
+
+.table {
+
+  &-success {
+    &, > th, > td {
+      background-color: @success;
+    }
+  }
+
+  &-info {
+    &, > th, > td {
+      background-color: @info;
+    }
+  }
+
+  &-danger {
+    &, > th, > td {
+      background-color: @danger;
+    }
+  }
+
+  &-warning {
+    &, > th, > td {
+      background-color: @warning;
+    }
+  }
+
+  &-hover {
+
+    .table-success:hover {
+      &, > th, > td {
+        background-color: darken(@success, 5%);
+      }
+    }
+
+    .table-info:hover {
+      &, > th, > td {
+        background-color: darken(@info, 5%);
+      }
+    }
+
+    .table-danger:hover {
+      &, > th, > td {
+        background-color: darken(@danger, 5%);
+      }
+    }
+
+    .table-warning:hover {
+      &, > th, > td {
+        background-color: darken(@warning, 5%);
+      }
+    }
+
+  }
+}
+
+// Forms =======================================================================
+
+// Navs ========================================================================
+
+.nav,
+.breadcrumb,
+.pagination {
+  font-size: 0.875em;
+}
+
+.dropdown-menu {
+  font-size: 0.875em;
+}
+
+// Indicators ==================================================================
+
+.alert {
+  border: none;
+  color: @white;
+  font-size: 0.875em;
+
+  &, p {
+    font-family: @font-family-sans-serif;
+  }
+
+  a, .alert-link {
+    color: #fff;
+    font-weight: normal;
+    text-decoration: underline;
+  }
+
+  // @each @color, @value in @theme-colors {
+  //   &-#{@color} {
+  //     background-color: @value;
+  //   }
+  // }
+}
+
+.badge {
+  vertical-align: bottom;
+
+  &-secondary,
+  &-warning {
+    color: @white;
+  }
+}
+
+.tooltip {
+  font-size: 11px;
+}
+
+// Progress bars ===============================================================
+
+// Containers ==================================================================
+
+.list-group {
+  font-size: 0.875em;
+}
