added footer, slight css adjustments

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -105,20 +105,7 @@
   background: @blue;
   border-radius: 0px;
   border: none;
-  margin: 5px 0 5px;
-  &:before {
-    content: '';
-    position: absolute;
-    display: inline-block;;
-    top: -20px;
-    left: -20px;
-    right: -20px;
-    bottom: -20px;
-    z-index: -1;
-    background: linear-gradient(#4582ec 79%, #8eafee);
-
-
-  }
+  margin: 0;
   .navbar-nav {
     li {
       a {
