--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,7 +20,7 @@
         left: 0;
         margin: auto;
         font-size: 3em;
-        text-align: center;
+        text-align: right;
         color: white;
       }
     }
@@ -80,7 +80,7 @@
         }
         .cta-image-container {
           padding: 5px;
-          border-radius: 1.1em;
+          border-radius: 1.3em;
           width: 310px;
           img {
             width: 300px;
