--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,13 +20,38 @@
 }
 
 html {
+  margin: 0;
+  padding: 0;
   height: 100%;
+  background: $blue;
   body {
     font-size: 16px;
-    background: $blue;
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 60px;
+    background: $white;
     #content {
-      background: $white;
-      height: 80%;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+    }
+    footer {
+     position: absolute;
+     bottom: 0;
+     width: 100%;
+     height: 60px;
+     background: $blue;
+     color: $white;
+     text-align: center;
+     .copyright-notice-container {
+       top: 0;
+       bottom: 0;
+       left: 0;
+       right: 0;
+       height: 20px;
+       position: absolute;
+       margin: auto;
+      }
     }
   }
 }
