--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,10 @@
       <%= yield %>
       <!-- </div> -->
     </div>
-
+    <footer>
+      <div class="container copyright-notice-container">
+        Copyright Hipsters of the Coast <%= Date.today.year %>. Magic: the Gathering and the Pro Tour are copyrights of Wizards of the Coast.
+      </div>
+    </footer>
   </body>
 </html>
