border for footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,7 @@ html {
      background: $blue;
      color: $white;
      text-align: center;
+     border-top: 1px solid $gray-100;
      .copyright-notice-container {
        top: 0;
        bottom: 0;
