brand fix for smaller screens

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -154,7 +154,7 @@
     color: @white;
     padding: 20px 15px;
     font-family: "beleren-bold", "Raleway", sans-serif;
-    font-size: 2.5em;
+    font-size: 1.9em;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     &:hover {
       color: @white;
@@ -356,7 +356,8 @@ table,
 @media screen and (min-width: 768px) {
   .navbar {
     .navbar-brand {
-      padding: 24.5px 15px
+      padding: 24.5px 15px;
+      font-size: 2.5em;
     }
   }
 }
