--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -361,3 +361,9 @@ table,
     }
   }
 }
+
+
+// HTML =======================================================================
+html {
+  font-size: 16px;
+}
