--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -20,3 +20,12 @@ $yellow:  #f0ad4e;
 $green:   #02B875;
 $teal:    #20c997;
 $cyan:    #17a2b8;
+
+$primary:       $blue;
+$secondary:     $gray-500;
+$success:       $green;
+$info:          $cyan;
+$warning:       $yellow;
+$danger:        $red;
+$light:         $gray-100;
+$dark:          $gray-800;
