--- a/app/assets/stylesheets/drafts.css.scss
+++ b/app/assets/stylesheets/drafts.css.scss
@@ -1,5 +1,15 @@
+@import "variables";
+
 #draft {
+  background: linear-gradient($gray-900 35%, $gray-800);
+  color: $white;
+  margin: -1em;
+  padding: 1em;
   #picks {
+    margin: 1em 0;
+    padding: .1em 0;
+    border: 1px solid $black;
+    background-color: $gray-800;
     div {
       height: 100px;
     }
@@ -8,10 +18,24 @@
     }
     .current-pick-container {
       display: inline-block;
+      border: 1px solid black;
+      border-right: 2px solid black;
+      margin: -.1em 0;
+      height: calc(100px + .2em);
+      .current-pick-info {
+        display: table-cell;
+        vertical-align: middle;
+        p {
+          &:first-child {
+            margin-top: 0;
+          }
+        }
+      }
     }
     .pick-order-container {
       overflow-y: hidden;
       white-space: nowrap;
+      padding: 0 15px 0 0;
       .pick-order {
         display: inline-block;
         .pick {
@@ -21,22 +45,29 @@
           text-align: center;
           white-space: normal;
           &.picked {
-            color: lightgray;
-            border: 1px solid lightgray;
+            color: $gray-600;
+            // border: 1px solid $gray-600;
             .pick-number {
-              border-right: 1px solid lightgray;
+              // border-right: 1px solid $gray-600;
+            }
+          }
+          &.current-pick {
+            border-color: $green;
+            .pick-number {
+              // color: $green;
+              border-right: 1px solid $green;
             }
           }
           .pick-number {
             display: inline-block;
             vertical-align: top;
-            font-size: 32px;
+            font-size: 2em;
             border-right: 1px solid black;
             padding: 0 10px;
             span {
               display: block;
               &.pick-number-label {
-                font-size: 16px;
+                font-size: 1em;
               }
             }
           }
@@ -45,12 +76,15 @@
             vertical-align: top;
             padding: 5px 10px;
             width: 125px;
+            font-size: .9em;
           }
         }
       }
     }
   }
   #players {
+    color: $black;
+    margin: 1em 0;
     table {
       border: 1px solid #dddddd;
     }
