--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -1,5 +1,13 @@
 <div id="draft" data-draft=<%= @draft.id %> data-user=<%= current_user.id %> data-team=<%= current_user.team(@draft.league).id %>>
-  <h2>Your Draft For <%= @draft.league.leagueable.name %></h2>
+  <div class="page-title">
+    <p class="page-instructions intro">
+      Welcome to your draft for
+    </p>
+    <h1><span class="tertiary-font"><%= @draft.league.leagueable.name %></span></h1>
+    <p class="page-instructions">
+      You'll find the pick order, all available Pros, and your team's lineup below.
+    </p>
+  </div>
 
   <% if !@draft.start_time %>
     <p>
@@ -22,35 +30,55 @@
   <% elsif @draft.active || Time.now > @draft.start_time %>
     <div id="picks" class="row">
       <div class="current-pick-container col-sm-2">
-        <p>
-          Current Pick
-        </p>
-        <p id="current-pick">
-          <%= @current_pick.user.name %>
-        </p>
-        <p id="until-next-pick">
-          Picks Until You: <%= @picks_until_your_pick %>
-        </p>
+        <div class="current-pick-info">
+          <p>
+            Current Pick
+          </p>
+          <p id="current-pick">
+            <%= @current_pick.user.name %>
+          </p>
+          <p id="until-next-pick">
+            Picks Until You: <%= @picks_until_your_pick %>
+          </p>
+        </div>
       </div>
       <div class="pick-order-container col-sm-10">
         <div class="pick-order">
           <% @draft.picks.sort_by{ |pick| pick.number }.each_with_index do |pick, index| %>
             <% if pick.player_id.nil? %>
-              <div class="pick" id="pick-<%= pick.number %>">
-                <div class="pick-number <%= pick.number %>">
-                  <span class="pick-number-label">
-                    PICK
-                  </span>
-                  <span>
-                    <%= pick.number %>
-                  </span>
+              <% if pick == @current_pick %>
+                <div class="pick current-pick" id="pick-<%= pick.number %>">
+                  <div class="pick-number <%= pick.number %>">
+                    <span class="pick-number-label">
+                      PICK
+                    </span>
+                    <span>
+                      <%= pick.number %>
+                    </span>
+                  </div>
+                  <div class="pick-info">
+                    <p>
+                      <%= pick.user.name %>
+                    </p>
+                  </div>
                 </div>
-                <div class="pick-info">
-                  <p>
-                    <%= pick.user.name %>
-                  </p>
+              <% else %>
+                <div class="pick" id="pick-<%= pick.number %>">
+                  <div class="pick-number <%= pick.number %>">
+                    <span class="pick-number-label">
+                      PICK
+                    </span>
+                    <span>
+                      <%= pick.number %>
+                    </span>
+                  </div>
+                  <div class="pick-info">
+                    <p>
+                      <%= pick.user.name %>
+                    </p>
+                  </div>
                 </div>
-              </div>
+              <% end %>
             <% else %>
               <div class="pick picked" id="pick-<%= pick.number %>">
                 <div class="pick-number">
