--- a/app/assets/stylesheets/drafts.css.scss
+++ b/app/assets/stylesheets/drafts.css.scss
@@ -1,92 +1,96 @@
 @import "variables";
 
 #draft {
-  background: linear-gradient($gray-900 35%, $gray-800);
-  color: $white;
-  margin: -1em;
-  padding: 1em;
-  #picks {
-    margin: 1em 0;
-    padding: .1em 0;
-    border: 1px solid $black;
-    background-color: $gray-800;
-    div {
-      height: 100px;
-    }
-    p {
-      margin: 5px 0px;
-    }
-    .current-pick-container {
-      display: inline-block;
-      border: 1px solid black;
-      border-right: 2px solid black;
-      margin: -.1em 0;
-      height: calc(100px + .2em);
-      .current-pick-info {
-        display: table-cell;
-        vertical-align: middle;
-        p {
-          &:first-child {
-            margin-top: 0;
+  #draft-progress-container {
+    background: linear-gradient($gray-900 35%, $gray-800);
+    color: $white;
+    margin: -1em;
+    padding: 1em;
+    #picks {
+      margin: 1em 0;
+      padding: .1em 0;
+      border: 1px solid $black;
+      background-color: $gray-800;
+      div {
+        height: 100px;
+      }
+      p {
+        margin: 5px 0px;
+      }
+      .current-pick-container {
+        display: inline-block;
+        border: 1px solid black;
+        border-right: 2px solid black;
+        margin: -.1em 0;
+        height: calc(100px + .2em);
+        .current-pick-info {
+          display: table-cell;
+          vertical-align: middle;
+          p {
+            &:first-child {
+              margin-top: 0;
+            }
           }
         }
       }
-    }
-    .pick-order-container {
-      overflow-y: hidden;
-      white-space: nowrap;
-      padding: 0 15px 0 0;
-      .pick-order {
-        display: inline-block;
-        .pick {
+      .pick-order-container {
+        overflow-y: hidden;
+        white-space: nowrap;
+        padding: 0 15px 0 0;
+        .pick-order {
           display: inline-block;
-          vertical-align: top;
-          border: 1px solid black;
-          text-align: center;
-          white-space: normal;
-          &.picked {
-            color: $gray-600;
-            // border: 1px solid $gray-600;
-            .pick-number {
-              // border-right: 1px solid $gray-600;
-            }
-          }
-          &.current-pick {
-            border-color: $green;
-            .pick-number {
-              // color: $green;
-              border-right: 1px solid $green;
-            }
-          }
-          .pick-number {
+          .pick {
             display: inline-block;
             vertical-align: top;
-            font-size: 2em;
-            border-right: 1px solid black;
-            padding: 0 10px;
-            span {
-              display: block;
-              &.pick-number-label {
-                font-size: 1em;
+            border: 1px solid black;
+            text-align: center;
+            white-space: normal;
+            &.picked {
+              color: $gray-600;
+              // border: 1px solid $gray-600;
+              .pick-number {
+                // border-right: 1px solid $gray-600;
               }
             }
-          }
-          .pick-info {
-            display: inline-block;
-            vertical-align: top;
-            padding: 5px 10px;
-            width: 125px;
-            font-size: .9em;
+            &.current-pick {
+              border-color: $green;
+              .pick-number {
+                // color: $green;
+                border-right: 1px solid $green;
+              }
+            }
+            .pick-number {
+              display: inline-block;
+              vertical-align: top;
+              font-size: 2em;
+              border-right: 1px solid black;
+              padding: 0 10px;
+              span {
+                display: block;
+                &.pick-number-label {
+                  font-size: 1em;
+                }
+              }
+            }
+            .pick-info {
+              display: inline-block;
+              vertical-align: top;
+              padding: 5px 10px;
+              width: 125px;
+              font-size: .9em;
+            }
           }
         }
       }
     }
   }
-  #players {
-    color: $black;
+  #draft-details-container {
     margin: 1em 0;
-    table {
-      border: 1px solid #dddddd;
+    #players {
+      color: $black;
+      table {
+        border: 1px solid #dddddd;
+      }
     }
   }
 }
