--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -1,33 +1,34 @@
 <div id="draft" data-draft=<%= @draft.id %> data-user=<%= current_user.id %> data-team=<%= current_user.team(@draft.league).id %>>
-  <div class="page-title">
-    <p class="page-instructions intro">
-      Welcome to your draft for
-    </p>
-    <h1><span class="tertiary-font"><%= @draft.league.leagueable.name %></span></h1>
-    <p class="page-instructions">
-      You'll find the pick order, all available Pros, and your team's lineup below.
-    </p>
-  </div>
+  <div id="draft-progress-container">
+    <div class="page-title">
+      <p class="page-instructions intro">
+        Welcome to your draft for
+      </p>
+      <h1><span class="tertiary-font"><%= @draft.league.leagueable.name %></span></h1>
+      <p class="page-instructions">
+        You'll find the pick order, all available Pros, and your team's lineup below.
+      </p>
+    </div>
 
-  <% if !@draft.start_time %>
+    <% if !@draft.start_time %>
     <p>
       Please select a start time for your draft.
     </p>
 
     <%= form_for [@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft] do |f| %>
-      <%= f.label "Start Time: " %>
-      <%= f.datetime_field :start_time,  min: Date.today %> <%#, max: @draft.league.leagueable.date %>
+    <%= f.label "Start Time: " %>
+    <%= f.datetime_field :start_time,  min: Date.today %> <%#, max: @draft.league.leagueable.date %>
 
     <%= f.submit %>
-  <% end %>
-  <% elsif @draft.completed %>
+    <% end %>
+    <% elsif @draft.completed %>
     <p>
       Your draft has finished.
     </p>
     <p>
       <%= link_to "View your team", game_competition_league_team_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, current_user.team(@draft.league)) %>
     </p>
-  <% elsif @draft.active || Time.now > @draft.start_time %>
+    <% elsif @draft.active || Time.now > @draft.start_time %>
     <div id="picks" class="row">
       <div class="current-pick-container col-sm-2">
         <div class="current-pick-info">
@@ -45,118 +46,121 @@
       <div class="pick-order-container col-sm-10">
         <div class="pick-order">
           <% @draft.picks.sort_by{ |pick| pick.number }.each_with_index do |pick, index| %>
-            <% if pick.player_id.nil? %>
-              <% if pick == @current_pick %>
-                <div class="pick current-pick" id="pick-<%= pick.number %>">
-                  <div class="pick-number <%= pick.number %>">
-                    <span class="pick-number-label">
-                      PICK
-                    </span>
-                    <span>
-                      <%= pick.number %>
-                    </span>
-                  </div>
-                  <div class="pick-info">
-                    <p>
-                      <%= pick.user.name %>
-                    </p>
-                  </div>
-                </div>
-              <% else %>
-                <div class="pick" id="pick-<%= pick.number %>">
-                  <div class="pick-number <%= pick.number %>">
-                    <span class="pick-number-label">
-                      PICK
-                    </span>
-                    <span>
-                      <%= pick.number %>
-                    </span>
-                  </div>
-                  <div class="pick-info">
-                    <p>
-                      <%= pick.user.name %>
-                    </p>
-                  </div>
-                </div>
-              <% end %>
-            <% else %>
-              <div class="pick picked" id="pick-<%= pick.number %>">
-                <div class="pick-number">
-                  <span class="pick-number-label">
-                    PICK
-                  </span>
-                  <span>
-                    <%= pick.number %>
-                  </span>
-                </div>
-                <div class="pick-info">
-                  <p>
-                    <%= pick.user.name %>
-                  </p>
-                  <p>
-                    <%= pick.player.name %>
-                  </p>
-                </div>
-              </div>
-            <% end %>
+          <% if pick.player_id.nil? %>
+          <% if pick == @current_pick %>
+          <div class="pick current-pick" id="pick-<%= pick.number %>">
+            <div class="pick-number <%= pick.number %>">
+              <span class="pick-number-label">
+                PICK
+              </span>
+              <span>
+                <%= pick.number %>
+              </span>
+            </div>
+            <div class="pick-info">
+              <p>
+                <%= pick.user.name %>
+              </p>
+            </div>
+          </div>
+          <% else %>
+          <div class="pick" id="pick-<%= pick.number %>">
+            <div class="pick-number <%= pick.number %>">
+              <span class="pick-number-label">
+                PICK
+              </span>
+              <span>
+                <%= pick.number %>
+              </span>
+            </div>
+            <div class="pick-info">
+              <p>
+                <%= pick.user.name %>
+              </p>
+            </div>
+          </div>
+          <% end %>
+          <% else %>
+          <div class="pick picked" id="pick-<%= pick.number %>">
+            <div class="pick-number">
+              <span class="pick-number-label">
+                PICK
+              </span>
+              <span>
+                <%= pick.number %>
+              </span>
+            </div>
+            <div class="pick-info">
+              <p>
+                <%= pick.user.name %>
+              </p>
+              <p>
+                <%= pick.player.name %>
+              </p>
+            </div>
+          </div>
+          <% end %>
           <% end %>
         </div>
       </div>
     </div>
-    <div id="players" class="col-sm-6">
-      <h4>
-        Available Players:
-      </h4>
-      <table class="table sortable">
-        <thead>
-          <tr>
-            <th>
-              Avg Points
-            </th>
-            <th>
-              Competitions
-            </th>
-            <th>
-              Name
-            </th>
-            <th data-defaultsort='disabled'>
+  </div>
+    <div id="draft-details-container">
+      <div id="players" class="col-sm-6">
+        <h4>
+          Available Players:
+        </h4>
+        <table class="table sortable">
+          <thead>
+            <tr>
+              <th>
+                Avg Points
+              </th>
+              <th>
+                Competitions
+              </th>
+              <th>
+                Name
+              </th>
+              <th data-defaultsort='disabled'>
 
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @available_players.each do |player| %>
-          <tr id="<%= player.id %>">
-            <td scope="row" data-defaultsort="desc">
-              <%= player.points_per_result %>
-            </td>
-            <td>
-              <%= player.results.count %>
-            </td>
-            <td>
-              <%= player.name %>
-            </td>
-            <td>
-              <% if @current_pick.user == current_user || current_user == @draft.league.admin %>
-              <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link"  %>
-              <% else %>
-              <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link", style: "display: none;"  %>
-              <% end %>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div id="lineup" class="col-sm-6">
-      <h4>
-        Your Lineup
-      </h4>
-      <% @your_lineup.each do |pick| %>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @available_players.each do |player| %>
+            <tr id="<%= player.id %>">
+              <td scope="row" data-defaultsort="desc">
+                <%= player.points_per_result %>
+              </td>
+              <td>
+                <%= player.results.count %>
+              </td>
+              <td>
+                <%= player.name %>
+              </td>
+              <td>
+                <% if @current_pick.user == current_user || current_user == @draft.league.admin %>
+                <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link"  %>
+                <% else %>
+                <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link", style: "display: none;"  %>
+                <% end %>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div id="lineup" class="col-sm-6">
+        <h4>
+          Your Lineup
+        </h4>
+        <% @your_lineup.each do |pick| %>
         <p>
           <%= pick.player.name %>
         </p>
-      <% end %>
+        <% end %>
+      </div>
     </div>
     <script>
 
