--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -153,9 +153,9 @@
   .navbar-brand {
     color: @white;
     padding: 20px 15px;
-    font-family: "beleren-bold", "Raleway", sans-serif;
+    font-family: "marvin_visions", "Raleway", sans-serif;
     font-size: 1.9em;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    letter-spacing: 1px;
     &:hover {
       color: @white;
     }
