--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,32 +12,7 @@
   </head>
 
   <body>
-    <%= nav_bar brand: "Fantasy Pro Tour", responsive: true do %>
-      <%= menu_group pull: :right do %>
-        <% if current_user && !current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).length.zero? %>
-          <%= drop_down "NOW DRAFTING" do %>
-            <% current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).each do |draft| %>
-              <%= menu_item draft.league.leagueable.name, game_competition_league_draft_path(draft.league.leagueable.game, draft.league.leagueable, draft.league, draft) %>
-            <% end %>
-          <% end %>
-        <% end %>
-        <% if current_user %>
-          <%= menu_item "Your Leagues", user_leagues_path %>
-        <% end %>
-        <%= menu_item "Find A Game", games_path %>
-        <% if current_user %>
-          <%= drop_down current_user.name do %>
-            <%= menu_item "Profile", user_path(current_user) %>
-            <% if current_user.league_users.where(confirmed: false).length.nonzero? %>
-              <%= menu_item "Invites", invites_path %>
-            <% end %>
-            <%= menu_item "Sign Out", destroy_user_session_path, method: "delete" %>
-          <% end %>
-        <% else %>
-          <%= menu_item "Sign In", new_user_session_path %>
-        <% end %>
-      <% end %>
-    <% end %>
+    <%= render "layouts/nav" %>
 
     <div id="content">
       <% if request.env['PATH_INFO'] != "/" %>
