--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,6 @@
         </div>
       <% end %>
     </div>
-    <footer>
-      <div class="container copyright-notice-container">
-        Copyright Hipsters of the Coast <%= Date.today.year %>. Magic: the Gathering and the Pro Tour are copyrights of Wizards of the Coast.
-      </div>
-    </footer>
+    <%= render "layouts/footer" %>
   </body>
 </html>
