--- a/app/assets/stylesheets/react-table.scss
+++ b/app/assets/stylesheets/react-table.scss
@@ -32,6 +32,7 @@
 .ReactTable .rt-thead.-headerGroups {
 	background: rgba(0,0,0,0.03);
 	border-bottom: 1px solid rgba(0,0,0,0.05);
+	display: none;
 }
 
 .ReactTable .rt-thead.-filters {
@@ -172,6 +173,7 @@
 .ReactTable .rt-tr {
 	flex: 1 0 auto;
 	display: inline-flex;
+	align-items: center;
 }
 
 .ReactTable .rt-th,
@@ -336,6 +338,7 @@
 }
 
 .ReactTable .-pagination .-pageSizeOptions {
+	display: none;
 	margin: 3px 10px;
 }
 
