--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,13 +55,7 @@ html {
      text-align: center;
      border-top: 1px solid $gray-100;
      .copyright-notice-container {
-       top: 0;
-       bottom: 0;
-       left: 0;
-       right: 0;
-       height: 20px;
-       position: absolute;
-       margin: auto;
+       padding: 1rem;
       }
     }
   }
