--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -110,46 +110,11 @@
       <h4>
         Available Players
       </h4>
-      <table class="table sortable">
-        <thead>
-          <tr>
-            <th>
-              Avg Points
-            </th>
-            <th>
-              Competitions
-            </th>
-            <th>
-              Name
-            </th>
-            <th data-defaultsort='disabled'>
-
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @available_players.each do |player| %>
-          <tr id="<%= player.id %>">
-            <td scope="row" data-defaultsort="desc">
-              <%= player.points_per_result %>
-            </td>
-            <td>
-              <%= player.results.count %>
-            </td>
-            <td>
-              <%= player.name %>
-            </td>
-            <td>
-              <% if @current_pick.user == current_user || current_user == @draft.league.admin %>
-              <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link"  %>
-              <% else %>
-              <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link", style: "display: none;"  %>
-              <% end %>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+      <%= content_tag :div,
+        id: "react-player-table",
+        data: @draft.id do %>
+      <% end %>
+      <%= javascript_pack_tag "available_player_table" %>
     </div>
     <div id="lineup" class="col-sm-6">
       <h4>
@@ -190,8 +155,3 @@
     </p>
   <% end %>
 </div>
-<%= content_tag :div,
-  id: "react-player-table",
-  data: @draft.id do %>
-<% end %>
-<%= javascript_pack_tag "hello_react" %>
