--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -106,7 +106,7 @@
     </div>
   </div>
   <div id="draft-details-container" class="row">
-    <div id="players" class="col-sm-6">
+    <div id="players" class="col-md-6">
       <h4>
         Available Players
       </h4>
@@ -116,7 +116,7 @@
       <% end %>
       <%= javascript_pack_tag "available_player_table" %>
     </div>
-    <div id="lineup" class="col-sm-6">
+    <div id="lineup" class="col-md-6">
       <h4>
         Your Lineup
       </h4>
