--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
-<h1>
-  <%= @user.name %>
-</h1>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <h1>
+      <%= @user.name %>
+    </h1>
 
-<p>
-  <%= link_to "Edit Profile", edit_user_registration_path %>
-</p>
+    <p>
+      <%= link_to "Edit Profile", edit_user_registration_path %>
+    </p>
+  </div>
+</div>
