--- a/app/views/league_users/confirm.html.erb
+++ b/app/views/league_users/confirm.html.erb
@@ -1,25 +1,14 @@
-<div id="league-user" class="confirm">
-  <h1><%= @league.admin.name %>'s <%= @league.leagueable.name %> Fantasy League</h1>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <%= render "leagues/info" %>
+    <div id="league-user" class="confirm">
+      <h3>Please Accept or Decline Your Invitiation</h3>
 
-  <h3>League Info</h3>
-  <p>
-    League Commissioner: <%= @league.admin.name %>
-  </p>
-  <p>
-    Format: TBD
-  </p>
-  <p>
-    Duration: TBD
-  </p>
+      <p>
+        <%= link_to "Accept", game_competition_league_league_user_path(@league.leagueable.game, @league.leagueable, @league, @league_user), method: :put, class: "btn btn-success" %>
+        <%= link_to "Decline", game_competition_league_league_user_path(@league.leagueable.game, @league.leagueable, @league, @league_user), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+      </p>
 
-  <h3>Please Accept Your Invitiation</h3>
-
-  <p>
-    <%= link_to "Accept", game_competition_league_league_user_path(@league.leagueable.game, @league.leagueable, @league, @league_user), method: :put %>
-  </p>
-
-  <p>
-    <%= link_to "Decline", game_competition_league_league_user_path(@league.leagueable.game, @league.leagueable, @league, @league_user), method: :delete, data: { confirm: "Are you sure?" } %>
-  </p>
-
+    </div>
+  </div>
 </div>
