--- a/app/views/league_users/index.html.erb
+++ b/app/views/league_users/index.html.erb
@@ -1,36 +1,59 @@
-<%= link_to "< Back To Your League", game_competition_league_path(@league.leagueable.game, @league.leagueable, @league) %>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <%= link_to "< Back To Your League", game_competition_league_path(@league.leagueable.game, @league.leagueable, @league) %>
 
-<h2>Competitors In <%= @league.admin.name %>'s league For <%= @league.leagueable.name %></h2>
+    <%= render "leagues/info" %>
 
-<h3>Registered Users</h3>
-<% @league.league_users.each do |league_user| %>
-  <p>
-    <% if league_user.user == current_user %>
-        <%= league_user.user.name %> (You)
-    <% elsif league_user.user == @league.admin %>
-      <p>
-        <%= league_user.user.name %> (Admin)
-      </p>
-    <% else %>
-      <% if league_user.confirmed %>
-        <%= link_to league_user.user.name, game_competition_league_team_path(@league.leagueable.game, @league.leagueable, @league, league_user.team(@league)) %>
-      <% else %>
-        <span class="unconfirmed">
-          <%= league_user.user.name %> <%= link_to "(Resend Invite)", game_competition_league_league_user_resend_invite_path(@league.leagueable.game, @league.leagueable, @league, league_user) %>
-        </span>
-      <% end %>
+    <h3>Registered Users</h3>
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>
+            Name
+          </th>
+          <th>
+            Remove
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @league.league_users.each do |league_user| %>
+        <tr>
+          <td>
+            <% if league_user.user == current_user %>
+              <%= league_user.user.name %> (You)
+            <% elsif league_user.user == @league.admin %>
+              <p>
+                <%= league_user.user.name %> (Admin)
+              </p>
+            <% else %>
+              <% if league_user.confirmed %>
+                <%= link_to league_user.user.name, game_competition_league_team_path(@league.leagueable.game, @league.leagueable, @league, league_user.team) %>
+              <% else %>
+                <span class="unconfirmed">
+                  <%= league_user.user.name %> <%= link_to "(Resend Invite)", game_competition_league_league_user_resend_invite_path(@league.leagueable.game, @league.leagueable, @league, league_user) %>
+                </span>
+              <% end %>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to "Remove", game_competition_league_league_user_path(@league.leagueable.game,@league.leagueable, @league, league_user), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-sm btn-danger" %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <h3>Add User By Email</h3>
+
+    <%= form_tag game_competition_league_league_users_path(@league.leagueable.game,@league.leagueable, @league) do %>
+
+      <div class="form-group required">
+        <%= label_tag :email, nil, class: "control-label" %>
+        <%= email_field_tag :email, nil, required: true, class: "form-control" %>
+      </div>
+
+      <%= submit_tag "Add User", class: "btn btn-primary" %>
+
     <% end %>
-    <%= link_to "Remove", game_competition_league_league_user_path(@league.leagueable.game,@league.leagueable, @league, league_user), method: :delete, data: { confirm: "Are you sure?" } %>
-  </p>
-<% end %>
-
-<h3>Add User By Email</h3>
-
-<%= form_tag game_competition_league_league_users_path(@league.leagueable.game,@league.leagueable, @league) do %>
-
-  <%= label_tag :email %>
-  <%= email_field_tag :email, nil, required: true %>
-
-  <%= submit_tag "Add User" %>
-
-<% end %>
+  </div>
+</div>
