--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,33 +1,37 @@
-<%= link_to "< Back To Your League", game_competition_league_path(@team.league.leagueable.game, @team.league.leagueable, @team.league) %>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <%= link_to "< Back To Your League", game_competition_league_path(@team.league.leagueable.game, @team.league.leagueable, @team.league) %>
 
-<h1>
-  <%= @team.name %>
-  <% if current_user == @team.user %>
-    <%= link_to "(Edit)", edit_game_competition_league_team_path(@team.league.leagueable.game, @team.league.leagueable, @team.league, @team) %>
-  <% end %>
-</h1>
+    <h1>
+      <%= @team.name %>
+      <% if current_user == @team.user %>
+      <%= link_to "(Edit)", edit_game_competition_league_team_path(@team.league.leagueable.game, @team.league.leagueable, @team.league, @team) %>
+      <% end %>
+    </h1>
 
-<table class="table sortable">
-  <thead>
-    <tr>
-      <th>
-        Points
-      </th>
-      <th>
-        Player
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @team.players.each do |player| %>
-    <tr id="<%= player.name %>">
-      <td>
-        <%= player.result(@team.league.leagueable).points %>
-      </td>
-      <td>
-        <%= player.name %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>
+            Points
+          </th>
+          <th>
+            Player
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @team.players.sort_by { |player| player.result(@team.league.leagueable)&.points or 0 }.reverse.each do |player| %>
+        <tr id="<%= player.name %>">
+          <td>
+            <%= player.result(@team.league.leagueable)&.points %>
+          </td>
+          <td>
+            <%= player.name %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
