--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -1,6 +1,10 @@
-<% @competitions.each do |competition| %>
-  <h2><%= competition.name %></h2>
-  <p>
-    <%= link_to "Create league!", new_game_competition_league_path(competition.game, competition) %>
-  </p>
-<% end %>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <% @competitions.each do |competition| %>
+      <h2><%= competition.name %></h2>
+      <p>
+        <%= link_to "Create league!", new_game_competition_league_path(competition.game, competition) %>
+      </p>
+    <% end %>
+  </div>
+</div>
