--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -9,25 +9,7 @@
         You'll find the pick order, all available Pros, and your team's lineup below.
       </p>
     </div>
-
-    <% if !@draft.start_time %>
-      <p>
-        Please select a start time for your draft.
-      </p>
-
-      <%= form_for [@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft] do |f| %>
-        <%= f.label "Start Time: " %>
-        <%= f.datetime_field :start_time,  min: Date.today %> <%#, max: @draft.league.leagueable.date %>
-        <%= f.submit %>
-      <% end %>
-    <% elsif @draft.completed %>
-    <p>
-      Your draft has finished.
-    </p>
-    <p>
-      <%= link_to "View your team", game_competition_league_team_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, current_user.team(@draft.league)) %>
-    </p>
-    <% elsif @draft.active || Time.now > @draft.start_time %>
+    <% if @draft.active || (@draft.start_time && Time.now > @draft.start_time) %>
     <div id="picks" class="row">
       <div class="current-pick-container col-sm-2">
         <div class="current-pick-info">
@@ -103,16 +85,39 @@
         </div>
       </div>
     </div>
+    <% end %>
   </div>
+  <% if !@draft.start_time %>
+    <div id="draft-details-container" class="row">
+      <div class="col-md-8 offset-md-2">
+        <p>
+          Please select a start time for your draft.
+        </p>
+
+        <%= form_for [@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft] do |f| %>
+          <div class="form-group required">
+            <%= f.label :start_time, "Start Time", class: "control-label" %>
+            <%= f.datetime_field :start_time,  min: Date.today, required: true, class: "form-control" %>
+          </div>
+          <%= f.submit "Set Start Time", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  <% elsif @draft.completed %>
+    <p>
+      Your draft has finished.
+    </p>
+    <p>
+      <%= link_to "View your team", game_competition_league_team_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, current_user.team(@draft.league)) %>
+    </p>
+  <% elsif @draft.active || (@draft.start_time && Time.now > @draft.start_time) %>
   <div id="draft-details-container" class="row">
     <div id="players" class="col-md-6">
       <h4>
         Available Players
       </h4>
-      <%= content_tag :div,
-        id: "react-player-table",
-        data: @draft.id do %>
-      <% end %>
+      <div id="react-player-table" data="<%= @draft.id %>">
+      </div>
       <%= javascript_pack_tag "available_player_table" %>
     </div>
     <div id="lineup" class="col-md-6">
@@ -146,11 +151,15 @@
     });
   </script>
   <% else %>
-    <p>
-      Start Time: <%= @draft.start_time.localtime.strftime("%A %B %e, %Y at %l:%M %p") %>
-    </p>
-    <p>
-      Your draft hasn't started yet.
-    </p>
+    <div id="draft-details-container" class="row">
+      <div class="col-md-8 offset-md-2">
+        <p>
+          Start Time: <%= @draft.start_time.localtime.strftime("%A %B %e, %Y at %l:%M %p") %>
+        </p>
+        <p>
+          Your draft hasn't started yet.
+        </p>
+      </div>
+    </div>
   <% end %>
 </div>
