--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,20 @@
       <% if request.env['PATH_INFO'] != "/" %>
         <div class="container-fluid">
       <% end %>
-      <% if notice || alert  %>
-      <div id="notice">
-        <% if notice %>
-        <span class="notice"><%= notice %></span>
-        <% elsif alert %>
-        <span class="alert"><%= alert %></span>
-        <% end %>
-      </div>
+      <% if alert %>
+        <div class="alert alert-danger alert-dismissible fade show col-sm-6 offset-sm-3" role="alert">
+          <%= alert %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <% elsif notice %>
+        <div class="alert alert-success alert-dismissible fade show col-sm-6 offset-sm-3" role="alert">
+          <%= notice %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
       <% end %>
 
       <%= yield %>
