--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -1,7 +1,20 @@
-<h2>Create a league for <%= @competition.name %></h2>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <h2><%= @competition.name %></h2>
+    <p>
+      Game: <%= @competition.game.name %>
+    </p>
+    <p>
+      Date: <%= @competition.date.localtime.strftime("%m/%d/%Y") %>
+    </p>
+    <p>
+      Location: <%= @competition.location %>
+    </p>
 
-<%= form_for [@competition.game, @competition, @league] do |f| %>
+    <%= form_for [@competition.game, @competition, @league] do |f| %>
 
-  <%= f.submit "Create league" %>
+      <%= f.submit "Create League", class: "btn btn-primary" %>
 
-<% end %>
+    <% end %>
+  </div>
+</div>
